# picow-boilerplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lwipopts.h  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake.yml
docs/: _config.yml  building-projects.md  config.md  creating-projects.md  httpclient.md  index.md  setting-up-env.md  usbfs.md
docs/_layouts/: default.html
docs/assets/css/: style.scss
opt/: README.md  config.c  config.h  httpclient.c  httpclient.h
usbfs/: CMakeLists.txt  README.md  diskio.c  diskio.cpp  diskio.h  ffconf.h  storage.c  storage.cpp  usb.c  usb.cpp  usbfs.c  usbfs.cpp  usbfs.h
